[gd_scene load_steps=24 format=3 uid="uid://rs1emuruss23"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_3obbs"]
[ext_resource type="PackedScene" uid="uid://cspicwn3k6q4e" path="res://scene/player.tscn" id="1_ag6gl"]
[ext_resource type="Texture2D" uid="uid://dqxs6pnmklux0" path="res://assets/sprites/world_tileset.png" id="2_vnr4k"]
[ext_resource type="TileSet" uid="uid://dr6s6qitbkdru" path="res://scene/tileset_game.tres" id="3_3dtw1"]
[ext_resource type="PackedScene" uid="uid://bxyas17k6e5wo" path="res://scene/platform.tscn" id="3_f32tk"]
[ext_resource type="PackedScene" uid="uid://dac5wao2fkvh6" path="res://scene/coin.tscn" id="4_251ks"]
[ext_resource type="PackedScene" uid="uid://bddwtlak1oohe" path="res://scene/killzone.tscn" id="5_642ec"]
[ext_resource type="PackedScene" uid="uid://cpjysr1oeb3yc" path="res://scene/mobile_actions.tscn" id="6_nhh5j"]
[ext_resource type="PackedScene" uid="uid://u7iwxa41ssg4" path="res://scene/Slime.tscn" id="6_vn86b"]
[ext_resource type="FontFile" uid="uid://bs6mhkgo5fbma" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="7_sjpyw"]
[ext_resource type="FontFile" uid="uid://dgfh8ygbmywbn" path="res://assets/fonts/PixelOperator8.ttf" id="8_5h6jg"]
[ext_resource type="PackedScene" uid="uid://dj1pcbx3uhi5j" path="res://scene/mobile_joystick.tscn" id="9_0lukh"]
[ext_resource type="PackedScene" uid="uid://dojjd3ps2ndk" path="res://scene/fade_in_out.tscn" id="11_kbsyo"]
[ext_resource type="PackedScene" uid="uid://dbwulrbhchhqc" path="res://scene/exit_door.tscn" id="13_eshpi"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2e65"]
texture = ExtResource("2_vnr4k")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
11:7/0 = 0
12:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_mxrqo"]
sources/0 = SubResource("TileSetAtlasSource_e2e65")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_e1f2y"]
distance = -85.0

[sub_resource type="Animation" id="Animation_hiq8p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(267, -3)]
}

[sub_resource type="Animation" id="Animation_5yhwp"]
resource_name = "move"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(267, -3), Vector2(470, -43)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kl13j"]
_data = {
"RESET": SubResource("Animation_hiq8p"),
"move": SubResource("Animation_5yhwp")
}

[sub_resource type="Animation" id="Animation_6pptm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(293, -73)]
}

[sub_resource type="Animation" id="Animation_7ri5f"]
resource_name = "move"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(293, -73), Vector2(256, -120)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7rkg"]
_data = {
"RESET": SubResource("Animation_6pptm"),
"move": SubResource("Animation_7ri5f")
}

[node name="Game" type="Node2D"]
metadata/_edit_vertical_guides_ = [-146.0]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_3obbs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true
follow_viewport_scale = 0.7

[node name="TileMap" type="TileMap" parent="CanvasLayer"]
tile_set = SubResource("TileSet_mxrqo")
format = 2
layer_0/tile_data = PackedInt32Array(-65527, 0, 9, -65528, 0, 9, -65529, 0, 9, -65530, 0, 9, 6, 0, 9, 5, 0, 9, 65541, 0, 9, 65542, 0, 9, 131078, 0, 9, 131079, 0, 9, 196616, 0, 9, 196617, 0, 9, 196618, 0, 9, 196619, 0, 9, 196620, 0, 9, 196621, 0, 9, 196622, 0, 9, 131086, 0, 9, 65550, 0, 9, 65549, 0, 9, 12, 0, 9, -65525, 0, 9, -65526, 0, 9, -131067, 0, 9, -131068, 0, 9, -131069, 0, 9, -131070, 0, 9, -131071, 0, 9, -131072, 0, 9, -65537, 0, 9, -65538, 0, 9, -65539, 0, 9, -65540, 0, 9, -65541, 0, 9, -65542, 0, 9, -65543, 0, 9, -8, 0, 9, 65528, 0, 9, 65529, 0, 9, 131066, 0, 9, 131067, 0, 9, 131068, 0, 9, 131069, 0, 9, 196606, 0, 9, 196607, 0, 9, 131072, 0, 9, 131073, 0, 9, 131074, 0, 9, 65539, 0, 9, 65540, 0, 9, -65531, 0, 9, -65532, 0, 9, -65533, 0, 9, -65534, 0, 9, -65535, 0, 9, -65536, 0, 9, -1, 0, 9, -2, 0, 9, 65533, 0, 9, 196604, 0, 9, 196605, 0, 9, 262143, 0, 9, 196608, 0, 9, 196609, 0, 9, 196610, 0, 9, 196611, 0, 9, 196612, 0, 9, 131077, 0, 9, 4, 0, 9, 3, 0, 9, 2, 0, 9, 1, 0, 9, 0, 0, 9)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_3dtw1")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(-65535, 131072, 4, -65533, 131072, 4, 65543, 393216, 7, 65547, 393216, 7)
layer_1/name = "Mid"
layer_1/tile_data = PackedInt32Array(131070, 720896, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 131077, 0, 0, 2, 0, 5, 1, 65536, 4, 65541, 65536, 6, 327714, 0, 0, 327713, 0, 0, 327712, 0, 0, 327711, 0, 0, 327710, 0, 0, 327709, 0, 0, 327708, 0, 0, 327707, 0, 0, -65534, 0, 3, -589827, 0, 0, -589826, 0, 0, -524290, 0, 1, -458753, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, 131069, 655360, 0, 131068, 589824, 0, 131066, 917504, 0, 131065, 851968, 0, 131064, 786432, 0, 131063, 720896, 0, 131062, 655360, 0, 131061, 589824, 0, -17, 0, 0, 65519, 0, 1, 131078, 131072, 0, 131079, 0, 0, 131080, 131072, 0, 131081, 0, 0, 131082, 131072, 0, 131083, 0, 0, 131084, 131072, 0, 131085, 0, 0, -196595, 983040, 0, -131074, 851968, 0, 131086, 131072, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 262170, 0, 0, 262179, 0, 0, 131095, 0, 0, 196632, 0, 0, 196633, 0, 0, -131087, 786432, 0, -131086, 851968, 0, -131085, 917504, 0, -131084, 851968, 0, -131083, 917504, 0, -131082, 851968, 0, -131081, 917504, 0, -131080, 851968, 0, -131079, 917504, 0, -131078, 851968, 0, -131077, 917504, 0, -131076, 851968, 0, -131075, 917504, 0, -131073, 917504, 0, -196608, 851968, 0, -196607, 917504, 0, -196606, 851968, 0, -196605, 917504, 0, -196604, 851968, 0, -196603, 917504, 0, -196602, 851968, 0, -196601, 917504, 0, -196600, 851968, 0, -196596, 917504, 0, -196597, 851968, 0, -196598, 851968, 0, -196599, 917504, 0, -65554, 0, 0, -131091, 0, 0, -196628, 0, 0, -262165, 0, 0, -327702, 0, 0, 19, 131072, 4, -262151, 131072, 4, -196623, 65536, 6, 131067, 983040, 0, -1, 131072, 4, -393217, 786432, 0, -458743, 983040, 0, -458752, 851968, 0, -458751, 917504, 0, -458750, 851968, 0, -458749, 917504, 0, -458748, 851968, 0, -458747, 917504, 0, -458746, 851968, 0, -458745, 917504, 0, -458744, 851968, 0, 131056, 786432, 0, 131059, 917504, 0, 131060, 983040, 0, 131057, 851968, 0, 131058, 917504, 0)
layer_2/name = "Foreground"
layer_2/z_index = 10
layer_2/tile_data = PackedInt32Array(-65534, 131072, 4, 65545, 65536, 5, 65542, 65536, 5, -8, 196608, 7, 65528, 196608, 8, -65544, 131072, 4, 65521, 524288, 10, 65522, 524288, 10, 65524, 393216, 2, 65523, 524288, 10, 65520, 393216, 2)

[node name="Player" parent="." instance=ExtResource("1_ag6gl")]

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -11)
zoom = Vector2(4, 4)
process_callback = 0
limit_bottom = 160

[node name="LabelScore" type="Label" parent="Player/Camera2D"]
unique_name_in_owner = true
offset_left = 68.0
offset_top = -81.0
offset_right = 174.0
offset_bottom = -61.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_5h6jg")
theme_override_font_sizes/font_size = 8
text = "Grab XXX coins."
vertical_alignment = 1

[node name="mobile_actions" parent="Player/Camera2D" instance=ExtResource("6_nhh5j")]
position = Vector2(144, 49)
scale = Vector2(0.17, 0.17)

[node name="mobile-joystick" parent="Player/Camera2D" instance=ExtResource("9_0lukh")]
position = Vector2(-104, 40)
scale = Vector2(0.4, 0.4)

[node name="Label" type="Label" parent="Player/Camera2D"]
offset_left = -174.0
offset_top = -79.0
offset_right = -41.0
offset_bottom = -69.0
theme_override_fonts/font = ExtResource("7_sjpyw")
theme_override_font_sizes/font_size = 9
text = "2024-05-25 13:54"

[node name="FadeInOut" parent="Player" instance=ExtResource("11_kbsyo")]
visible = false
z_index = 4096
offset_left = -175.0
offset_top = -92.0
offset_right = 1225.0
offset_bottom = 556.0
scale = Vector2(0.25, 0.25)

[node name="Killzone" parent="." instance=ExtResource("5_642ec")]
position = Vector2(176, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("WorldBoundaryShape2D_e1f2y")

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("4_251ks")]
position = Vector2(124, 18)

[node name="Coin4" parent="Coins" instance=ExtResource("4_251ks")]
position = Vector2(91, 13)

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("3_f32tk")]
position = Vector2(289, -59)

[node name="Platform3" parent="Platforms" instance=ExtResource("3_f32tk")]
position = Vector2(267, -3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform3"]
libraries = {
"": SubResource("AnimationLibrary_kl13j")
}
autoplay = "move"

[node name="Platform2" parent="Platforms" instance=ExtResource("3_f32tk")]
position = Vector2(293, -73)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform2"]
libraries = {
"": SubResource("AnimationLibrary_a7rkg")
}
autoplay = "move"

[node name="Slime" parent="." instance=ExtResource("6_vn86b")]
position = Vector2(473, 68)
speed = 30

[node name="Slime2" parent="." instance=ExtResource("6_vn86b")]
position = Vector2(59, -124)

[node name="Labels" type="Node" parent="."]

[node name="Label" type="Label" parent="Labels"]
offset_left = -410.0
offset_top = -376.0
offset_right = -336.0
offset_bottom = -360.0
scale = Vector2(1.24676, 1.21628)
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_fonts/font = ExtResource("8_5h6jg")
theme_override_font_sizes/font_size = 8
text = "Pas mal !"

[node name="exit_door" parent="." instance=ExtResource("13_eshpi")]
z_index = -1
position = Vector2(141, 32)
next_level = 1
